# mem-cli

./: .gitignore  AGENTS.md  Agent.md  CHANGELOG.md  LICENSE  README.md  RELEASES.md  pyproject.toml  release.sh  tokens-tracker.md
.claude/skills/brand-colors/: SKILL.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/command-help/: SKILL.md
.claude/skills/mcp-autostart-configuration/: SKILL.md
.claude/skills/mcp-serve/: SKILL.md
.claude/skills/memories/: SKILL.md
.claude/skills/release-matrix/: skill.md
.claude/skills/run-mcp-serve/: SKILL.md
.github/workflows/: release.yml
docs/: architecture.md  homepage.md  logoascii.txt  project-memory.md  roadmap.md
hooks/: claude-mem.sh  claude-recall.sh  codex-mem.py
scripts/: build_binary.py  mem_entry.py  release.sh  release_build.py  release_utils.py  sync_version.py  update_formula.py
src/agent_recall/: __init__.py  app.py  cli.py  config.py
src/agent_recall/models/: __init__.py  token_event.py
src/agent_recall/services/: monitor_service.py  process_registry.py  token_tracker.py
src/agent_recall/services/adapters/: jsonl_adapter.py
src/agent_recall/storage/: runtime_state.py
src/agent_recall/ui/: dashboard.py
src/agent_recall/utils/: __init__.py
src/clar/: __init__.py  app.py  cli.py  config.py
src/clar/models/: __init__.py  agent_status.py
src/clar/services/: __init__.py  memory_service.py  monitor_service.py  process_registry.py  prompt_service.py  token_tracker.py
src/clar/services/adapters/: __init__.py  jsonl_adapter.py
src/clar/storage/: memory_store.py
src/clar/ui/: dashboard.py
src/clar/utils/: __init__.py
src/mem/: __init__.py  app.py  cli.py  config.py  version.py
src/mem/mcp/: __init__.py  server.py
src/mem/models/: agent_status.py  memory.py  token_event.py
src/mem/prompts/: project_memory.md
src/mem/services/: __init__.py  autostart.py  embedding_service.py  macos_launchd.py  memory_service.py  monitor_service.py  process_registry.py  prompt_service.py  token_tracker.py
src/mem/services/adapters/: __init__.py  jsonl_adapter.py  (+1 more)
src/mem/storage/: __init__.py  dashboard_history.py  memory_store.py  token_snapshot.py
src/mem/ui/: dashboard.py
src/mem/utils/: logging.py  time.py
tests/: test_adapter_registry.py  test_adapters_command.py  test_auto_capture.py  test_autostart_cross_platform.py  test_cli.py  test_codex_mem.py  test_compress.py  test_config_command.py  test_config_home.py  test_dashboard.py  test_dashboard_history.py  test_jsonl_adapter.py  test_macos_launchd.py  test_mcp_server.py  test_memory_cli.py  test_memory_model.py  test_memory_service.py  test_memory_store.py  test_packaging_metadata.py  test_process_registry.py  test_release_pipeline.py  test_semantic_search.py  test_token_snapshot.py  test_token_tracker.py  test_version_contract.py
