[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-cli"
version = "0.1.0"
description = "Mem CLI for AI agents — Local token observability & agent memory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "mem-cli contributors" }
]
dependencies = [
  "typer>=0.15.0",
  "rich==13.9.4",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "build==1.2.2",
]

[project.scripts]
mem = "mem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mem = ["prompts/*.md"]
