[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-cli"
version = "0.1.16"
description = "Mem CLI for AI agents — Local token observability & agent memory"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "mem-cli contributors" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "cli", "memory", "tokens", "observability"]
dependencies = [
  "typer>=0.15.0",
  "rich==13.9.4",
  "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/mem-cli"
Repository = "https://github.com/your-org/mem-cli"
Issues = "https://github.com/your-org/mem-cli/issues"

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
]
release = [
  "build==1.2.2",
  "pyinstaller>=6.0",
  "pyinstaller-hooks-contrib>=2024.0",
]

[project.scripts]
mem = "mem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mem = ["prompts/*.md"]
